--- a/bc_test/Cargo.toml
+++ b/bc_test/Cargo.toml
@@ -19,3 +19,4 @@ serde_json = "1.0.96"
 sqlx={version="0.6.3",features = ["postgres", "chrono","json","runtime-async-std-native-tls"]}
 tokio = {version="1.28.1",features=["full"]}
 tower = {version="0.4.13",features = ["full"]}
+tower-http = { version = "0.4.0", features = ["cors"] }
