--- a/khalisisi/package.json
+++ b/khalisisi/package.json
@@ -22,6 +22,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
     "@mui/styled-engine": "^5.12.3",
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "react-beautiful-dnd": "^13.1.1"
   }
 }
